@startuml

title 다대일 단방향

class Member {
    - id : Long
    - team : Team
    - username : String
}

class Team {
    - id : Long
    - name : String
}

Member "*" --> "1" Team

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <u>x</u>
hide methods
hide stereotypes

table(MEMBER) {
    primary_key(MEMBER_ID)
    foreign_key(TEAM_ID)
    USERNAME
}

table(TEAM) {
    primary_key(TEAM_ID)
    NAME
}

MEMBER }o--o| TEAM

note "연관관계 매핑" as N0
note "객체 연관관계" as N1
note "테이블 연관관계" as N2

Member - N0
N0 -> MEMBER

Member . N1
Team . N1

MEMBER . N2
TEAM . N2

@enduml
